--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ input:focus { outline:2px solid #FFD700;}
 <div id="clock"></div>
 <div class="container">
   <div style="text-align:center;">
-    <img src="images/rakoto.jpg" alt="RAKOTO - Commercial Airtel" class="rakoto-photo">
+    <img src="RAKOTO.jpg" alt="RAKOTO - Commercial Airtel" class="rakoto-photo">
     <p style="font-weight:bold; color:#333; margin-top:10px;">RAKOTO - Commercial Airtel (Vente Professionnelle)</p>
   </div>
   <p style="text-align:center; margin-bottom:20px;">RAKOTO dia manolotra ho an'ny mpanjifa ny box internet Airtel, haingam-pandeha, mora vidy, ary azo entina amin'izay tiana.</p>
@@ -56,7 +56,7 @@ input:focus { outline:2px solid #FFD700;}
 
   <!-- Smartbox -->
   <div class="product-box">
-    <img src="images/smartbox.png" alt="Smartbox Wifi 4G">
+    <img src="smartbox.png" alt="Smartbox Wifi 4G">
     <h3>Smartbox Wifi 4G</h3>
     <ul>
       <li>Connexion stable</li>
@@ -78,7 +78,7 @@ input:focus { outline:2px solid #FFD700;}
 
   <!-- Pocket Wifi -->
   <div class="product-box">
-    <img src="images/pocketwifi.png" alt="Pocket Wifi 4G">
+    <img src="pocketwifi.png" alt="Pocket Wifi 4G">
     <h3>Pocket Wifi 4G</h3>
     <ul>
       <li>Portable et léger</li>
@@ -100,7 +100,7 @@ input:focus { outline:2px solid #FFD700;}
 
   <!-- Formulaire commande -->
   <div id="order-section">
-    <p class="section-title">2 - Apetraho eto ny mombamomba anao</p>
+    <p class="section-title">2 - Soraty eto ny mombamomba anao</p>
     <form id="order-form">
       <img id="selected-image" class="selected-image" src="" alt="Box choisi">
       <input type="text" name="prenoms" placeholder="Prénoms" required>
@@ -112,11 +112,11 @@ input:focus { outline:2px solid #FFD700;}
       <input type="text" name="adresse" id="adresse" placeholder="Votre adresse complète" required>
       <div>
         <input type="checkbox" id="tanaville" name="tanaville">
-        <label for="tanaville">J'habite à Tanà (Livraison gratuite)</label>
+        <label for="tanaville">Eto Antananarivo Ville no misy ahy(Livraison gratuite)</label>
       </div>
       <div>
         <input type="checkbox" id="retrait" name="retrait">
-        <label for="retrait">Je récupère ma commande au point de vente</label>
+        <label for="retrait">Halaiko mivantana eny an-toerana ilay BOX fa tsy "livrer-na"</label>
       </div>
       <button type="submit">CONFIRMER MON ACHAT</button>
     </form>
@@ -133,7 +133,7 @@ input:focus { outline:2px solid #FFD700;}
 
   <!-- Message succès -->
   <div id="success-message">
-    <h3>Misaotra betsaka!</h3>
+    <h3>Misaotra betsaka 😀</h3>
     <p class="section-title">3 - Safidio amin'ireto ny hifandraisanao amin'ny RAKOTO Commercial Airtel</p>
     <div class="contact-options">
       <a id="whatsapp-link" class="whatsapp" href="#" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
