--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ input:focus { outline:2px solid #FFD700;}
         <li>Produit stable même en cas de coupure électrique courte</li>
       </ul>
     </div>
-    <button onclick="selectProduct('Smartbox Wifi 4G', 145000, 'images/smartbox.png')">Commander cette Box</button>
+    <button onclick="selectProduct('Smartbox Wifi 4G', 145000, 'smartbox.png')">Commander cette Box</button>
   </div>
 
   <!-- Pocket Wifi -->
@@ -95,7 +95,7 @@ input:focus { outline:2px solid #FFD700;}
         <li>Autonomie 6h, batterie rechargeable</li>
       </ul>
     </div>
-    <button onclick="selectProduct('Pocket Wifi 4G', 99000, 'images/pocketwifi.png')">Commander cette Box</button>
+    <button onclick="selectProduct('Pocket Wifi 4G', 99000, 'pocketwifi.png')">Commander cette Box</button>
   </div>
 
   <!-- Formulaire commande -->
