--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ input:focus { outline:2px solid #FFD700;}
 .call-button:hover { transform:scale(1.1); }
 #panier-summary { display:none; margin-top:20px; padding:15px; border:1px solid #e60000; border-radius:10px; background:#fff5f5; animation:fadeIn 0.5s;}
 #order-section { display:none; }
-.selected-image { width:180px; margin:0 auto 15px; display:block; border:4px solid #FFD700; border-radius:8px; box-shadow:0 0 10px #FFD700;}
+.selected-image { width:180px; margin:0 auto 15px; display:none; border:4px solid #FFD700; border-radius:8px; box-shadow:0 0 10px #FFD700; transition: opacity 0.3s;}
 </style>
 </head>
 <body>
@@ -152,66 +152,66 @@ input:focus { outline:2px solid #FFD700;}
 </div>
 
 <script>
-  // Horloge
-  function updateClock() {
-    const now = new Date();
-    const options = { timeZone: 'Indian/Antananarivo', hour: '2-digit', minute: '2-digit', second: '2-digit' };
-    document.getElementById("clock").textContent = "Ora ankehitriny (Madagasikara) : " + now.toLocaleTimeString('fr-FR', options);
-  }
-  setInterval(updateClock, 1000);
-  updateClock();
+function updateClock() {
+  const now = new Date();
+  const options = { timeZone: 'Indian/Antananarivo', hour: '2-digit', minute: '2-digit', second: '2-digit' };
+  document.getElementById("clock").textContent = "Ora ankehitriny (Madagasikara) : " + now.toLocaleTimeString('fr-FR', options);
+}
+setInterval(updateClock, 1000);
+updateClock();
 
-  // Formulaire et sélection produit
-  const form = document.getElementById('order-form');
-  const successMessage = document.getElementById('success-message');
-  const adresseInput = document.getElementById('adresse');
-  const tanavilleCheckbox = document.getElementById('tanaville');
-  const retraitCheckbox = document.getElementById('retrait');
-  const selectedImage = document.getElementById('selected-image');
-  const orderSection = document.getElementById('order-section');
-  const panierSummary = document.getElementById('panier-summary');
-  const panierProduit = document.getElementById('panier-produit');
-  const panierPrix = document.getElementById('panier-prix');
-  const panierTotal = document.getElementById('panier-total');
+const form = document.getElementById('order-form');
+const successMessage = document.getElementById('success-message');
+const adresseInput = document.getElementById('adresse');
+const tanavilleCheckbox = document.getElementById('tanaville');
+const retraitCheckbox = document.getElementById('retrait');
+const selectedImage = document.getElementById('selected-image');
+const orderSection = document.getElementById('order-section');
+const panierSummary = document.getElementById('panier-summary');
+const panierProduit = document.getElementById('panier-produit');
+const panierPrix = document.getElementById('panier-prix');
+const panierTotal = document.getElementById('panier-total');
 
-  retraitCheckbox.addEventListener('change', () => {
-    adresseInput.disabled = retraitCheckbox.checked;
-    if(retraitCheckbox.checked) adresseInput.value = '';
-  });
+retraitCheckbox.addEventListener('change', () => {
+  adresseInput.disabled = retraitCheckbox.checked;
+  if(retraitCheckbox.checked) adresseInput.value = '';
+});
 
-  function selectProduct(name, price, imagePath) {
-    document.getElementById('product-input').value = name;
-    document.getElementById('price-input').value = price;
-    selectedImage.src = imagePath;
-    orderSection.style.display = 'block';
-    orderSection.scrollIntoView({ behavior: 'smooth' });
+function selectProduct(name, price, imagePath) {
+  document.getElementById('product-input').value = name;
+  document.getElementById('price-input').value = price;
+  selectedImage.src = imagePath;
+  selectedImage.style.display = 'block';
+  orderSection.style.display = 'block';
+  orderSection.scrollIntoView({ behavior: 'smooth' });
 
-    panierProduit.textContent = name;
-    panierPrix.textContent = price;
-    panierTotal.textContent = price;
-    panierSummary.style.display = 'block';
-  }
+  panierProduit.textContent = name;
+  panierPrix.textContent = price;
+  panierTotal.textContent = price;
+  panierSummary.style.display = 'block';
+}
 
-  form.addEventListener('submit', function(e){
-    e.preventDefault();
-    const nom = form.nom.value;
-    const prenoms = form.prenoms.value;
-    const numero = form.numero.value;
-    const produit = form['produit'].value;
-    const prix = form['prix'].value;
-    const adresse = adresseInput.value || "Point de vente";
-    const tanaville = tanavilleCheckbox.checked ? "Oui" : "Non";
-    const retrait = retraitCheckbox.checked ? "Oui" : "Non";
+form.addEventListener('submit', function(e){
+  e.preventDefault();
+  const nom = form.nom.value;
+  const prenoms = form.prenoms.value;
+  const numero = form.numero.value;
+  const produit = form['produit'].value;
+  const prix = form['prix'].value;
+  const adresse = adresseInput.value || "Point de vente";
+  const tanaville = tanavilleCheckbox.checked ? "Oui" : "Non";
+  const retrait = retraitCheckbox.checked ? "Oui" : "Non";
 
-    const message = `Nom: ${nom}\nPrénoms: ${prenoms}\nTéléphone: ${numero}\nProduit: ${produit}\nPrix: ${prix}\nAdresse: ${adresse}\nHabite à Tanà: ${tanaville}\nRetrait: ${retrait}`;
+  const message = `Nom: ${nom}\nPrénoms: ${prenoms}\nTéléphone: ${numero}\nProduit: ${produit}\nPrix: ${prix}\nAdresse: ${adresse}\nHabite à Tanà: ${tanaville}\nRetrait: ${retrait}`;
 
-    document.getElementById('whatsapp-link').href = "https://wa.me/261334816838?text=" + encodeURIComponent(message);
-    document.getElementById('sms-link').href = "sms:+261334816838?body=" + encodeURIComponent(message);
+  document.getElementById('whatsapp-link').href = "https://wa.me/261334816838?text=" + encodeURIComponent(message);
+  document.getElementById('sms-link').href = "sms:+261334816838?body=" + encodeURIComponent(message);
 
-    form.style.display = "none";
-    successMessage.style.display = "block";
-    successMessage.scrollIntoView({ behavior: 'smooth' });
-  });
+  form.style.display = "none";
+  successMessage.style.display = "block";
+  successMessage.scrollIntoView({ behavior: 'smooth' });
+});
 </script>
 </body>
-</html>
+  </html>
+
