--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@ input:focus { outline:2px solid #FFD700;}
 .call-button:hover { transform:scale(1.1); }
 #panier-summary { display:none; margin-top:20px; padding:15px; border:1px solid #e60000; border-radius:10px; background:#fff5f5; animation:fadeIn 0.5s;}
 #order-section { display:none; }
-.selected-image { width:180px; margin:0 auto 15px; display:none; border:4px solid #FFD700; border-radius:8px; box-shadow:0 0 10px #FFD700; transition: opacity 0.3s;}
+.selected-image { width:180px; margin:0 auto 15px; display:block; border:4px solid #FFD700; border-radius:8px; box-shadow:0 0 10px #FFD700;}
+.checkbox-msg { font-size:14px; margin-left:10px; display:none; }
+.checkbox-msg.green { color:green; }
+.checkbox-msg.blue { color:blue; }
 </style>
 </head>
 <body>
@@ -108,16 +111,26 @@ input:focus { outline:2px solid #FFD700;}
       <input type="tel" name="numero" placeholder="Téléphone" required>
       <input type="text" name="produit" id="product-input" readonly>
       <input type="text" name="prix" id="price-input" readonly>
-      <label for="adresse">Adresse de livraison :</label>
-      <input type="text" name="adresse" id="adresse" placeholder="Votre adresse complète" required>
+
       <div>
         <input type="checkbox" id="tanaville" name="tanaville">
-        <label for="tanaville">Eto Antananarivo Ville no misy ahy(Livraison gratuite)</label>
+        <label for="tanaville">Faritra Tanà Ville</label>
+        <span id="tanaville-msg" class="checkbox-msg green">
+          Gratuit ny livraison, izany hoe aterinay maimaim-poana any aminao izahay koa manasa anao hanamarina ny toerana, repère ahitàna mazava ny misy anao
+        </span>
       </div>
+
       <div>
         <input type="checkbox" id="retrait" name="retrait">
-        <label for="retrait">Halaiko mivantana eny an-toerana ilay BOX fa tsy "livrer-na"</label>
+        <label for="retrait">Tsy aterina fa alaiko eny amin'ny point de vente ilay box</label>
+        <span id="retrait-msg" class="checkbox-msg blue">
+          Nisafidy ny haka ilay Box etÿ antoerana ianao
+        </span>
       </div>
+
+      <label for="adresse">Adresse de livraison :</label>
+      <input type="text" name="adresse" id="adresse" placeholder="Votre adresse complète" required>
+
       <button type="submit">CONFIRMER MON ACHAT</button>
     </form>
   </div>
@@ -152,6 +165,7 @@ input:focus { outline:2px solid #FFD700;}
 </div>
 
 <script>
+// Horloge
 function updateClock() {
   const now = new Date();
   const options = { timeZone: 'Indian/Antananarivo', hour: '2-digit', minute: '2-digit', second: '2-digit' };
@@ -160,11 +174,7 @@ function updateClock() {
 setInterval(updateClock, 1000);
 updateClock();
 
-const form = document.getElementById('order-form');
-const successMessage = document.getElementById('success-message');
-const adresseInput = document.getElementById('adresse');
-const tanavilleCheckbox = document.getElementById('tanaville');
-const retraitCheckbox = document.getElementById('retrait');
+// Sélection produit
 const selectedImage = document.getElementById('selected-image');
 const orderSection = document.getElementById('order-section');
 const panierSummary = document.getElementById('panier-summary');
@@ -172,16 +182,10 @@ const panierProduit = document.getElementById('panier-produit');
 const panierPrix = document.getElementById('panier-prix');
 const panierTotal = document.getElementById('panier-total');
 
-retraitCheckbox.addEventListener('change', () => {
-  adresseInput.disabled = retraitCheckbox.checked;
-  if(retraitCheckbox.checked) adresseInput.value = '';
-});
-
 function selectProduct(name, price, imagePath) {
   document.getElementById('product-input').value = name;
   document.getElementById('price-input').value = price;
   selectedImage.src = imagePath;
-  selectedImage.style.display = 'block';
   orderSection.style.display = 'block';
   orderSection.scrollIntoView({ behavior: 'smooth' });
 
@@ -190,6 +194,25 @@ function selectProduct(name, price, imagePath) {
   panierTotal.textContent = price;
   panierSummary.style.display = 'block';
 }
+
+// Gestion form et notifications checkbox
+const form = document.getElementById('order-form');
+const successMessage = document.getElementById('success-message');
+const adresseInput = document.getElementById('adresse');
+const tanavilleCheckbox = document.getElementById('tanaville');
+const retraitCheckbox = document.getElementById('retrait');
+const tanavilleMsg = document.getElementById('tanaville-msg');
+const retraitMsg = document.getElementById('retrait-msg');
+
+retraitCheckbox.addEventListener('change', () => {
+  adresseInput.disabled = retraitCheckbox.checked;
+  if(retraitCheckbox.checked) adresseInput.value = '';
+  retraitMsg.style.display = retraitCheckbox.checked ? 'inline' : 'none';
+});
+
+tanavilleCheckbox.addEventListener('change', () => {
+  tanavilleMsg.style.display = tanavilleCheckbox.checked ? 'inline' : 'none';
+});
 
 form.addEventListener('submit', function(e){
   e.preventDefault();
@@ -212,6 +235,7 @@ form.addEventListener('submit', function(e){
   successMessage.scrollIntoView({ behavior: 'smooth' });
 });
 </script>
+
 </body>
-  </html>
+</html>
 
