--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@ input:focus { outline:2px solid #FFD700;}
     <img src="smartbox.png" alt="Smartbox Wifi 4G">
     <h3>Smartbox Wifi 4G</h3>
     <ul>
-      <li>Connexion stable</li>
+      <li>04 antennes</li>
+      <li>Connexion stable tsara</li>
       <li>Wifi jusqu'à 32 appareils</li>
       <li>Installation simple</li>
       <li>Prix : 145.000 Ar</li>
@@ -70,10 +71,10 @@ input:focus { outline:2px solid #FFD700;}
     <div class="faq-section">
       <h4>Questions fréquentes :</h4>
       <ul>
-        <li>Nombre d'appareils max : 32</li>
-        <li>Installation facile, pas besoin de technicien</li>
-        <li>Livraison gratuite à Tanà (cochez “Tanà ville”)</li>
-        <li>Produit stable même en cas de coupure électrique courte</li>
+        <li>TSY MISY ENGAGEMENT</li>
+        <li>Mora atao ny installation, misy vidéo omenay anao</li>
+        <li>Livraison gratuite à Tanà</li>
+        <li>Tsy matahotra délestage</li>
       </ul>
     </div>
     <button onclick="selectProduct('Smartbox Wifi 4G', 145000, 'smartbox.png')">Commander cette Box</button>
@@ -84,8 +85,8 @@ input:focus { outline:2px solid #FFD700;}
     <img src="pocketwifi.png" alt="Pocket Wifi 4G">
     <h3>Pocket Wifi 4G</h3>
     <ul>
-      <li>Portable et léger</li>
-      <li>Connexion rapide 4G</li>
+      <li>Portable, afaka atao am-paosy</li>
+      <li>Connexion rapide be 4G</li>
       <li>Autonomie batterie 6h+</li>
       <li>Prix : 99.000 Ar</li>
     </ul>
@@ -94,8 +95,8 @@ input:focus { outline:2px solid #FFD700;}
       <ul>
         <li>Nombre d'appareils max : 10</li>
         <li>Très facile à transporter</li>
-        <li>Livraison gratuite à Tanà (cochez “Tanà ville”)</li>
-        <li>Autonomie 6h, batterie rechargeable</li>
+        <li>Livraison gratuite à Tanà </li>
+        <li>Maharitra hatr@ 6H be izao</li>
       </ul>
     </div>
     <button onclick="selectProduct('Pocket Wifi 4G', 99000, 'pocketwifi.png')">Commander cette Box</button>
@@ -116,7 +117,7 @@ input:focus { outline:2px solid #FFD700;}
         <input type="checkbox" id="tanaville" name="tanaville">
         <label for="tanaville">Faritra Tanà Ville</label>
         <span id="tanaville-msg" class="checkbox-msg green">
-          Gratuit ny livraison, izany hoe aterinay maimaim-poana any aminao izahay koa manasa anao hanamarina ny toerana, repère ahitàna mazava ny misy anao
+          Gratuit ny livraison, izany hoe aterinay maimaim-poana any aminao. Koa manasa anao hanamarina ny toerana, repère ahitàna mazava ny misy anao 😀
         </span>
       </div>
 
