--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@ input:focus { outline:2px solid #FFD700;}
       <li>Prix : 145.000 Ar</li>
     </ul>
     <div class="faq-section">
-      <h4>Questions fréquentes :</h4>
+      <h4>TSARA HO FATATRA:</h4>
       <ul>
         <li>TSY MISY ENGAGEMENT</li>
+        <li>BONUS 30 GO (10GO/Mois)</li>
         <li>Mora atao ny installation, misy vidéo omenay anao</li>
         <li>Livraison gratuite à Tanà</li>
         <li>Tsy matahotra délestage</li>
@@ -91,12 +92,14 @@ input:focus { outline:2px solid #FFD700;}
       <li>Prix : 99.000 Ar</li>
     </ul>
     <div class="faq-section">
-      <h4>Questions fréquentes :</h4>
+      <h4>TSARA HO FANTATRA :</h4>
       <ul>
+        <li>TSY MISY ENGAGEMENT</li>
+        <li>BONUS 12 GO (4GO/Mois)</li>
         <li>Nombre d'appareils max : 10</li>
         <li>Très facile à transporter</li>
         <li>Livraison gratuite à Tanà </li>
-        <li>Maharitra hatr@ 6H be izao</li>
+        <li>BATTERIE Maharitra hatr@ 6H be izao</li>
       </ul>
     </div>
     <button onclick="selectProduct('Pocket Wifi 4G', 99000, 'pocketwifi.png')">Commander cette Box</button>
